Bedrock weapon two added

--- a/src/main/resources/assets/bedrock-weapons/lang/en_us.json
+++ b/src/main/resources/assets/bedrock-weapons/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.bedrock-weapons.bedrocksword": "Bedrock Sword"
+  "item.bedrock-weapons.bedrocksword": "Bedrock Sword",
+  "item.bedrock-weapons.bedrockaxe": "Bedrock Axe"
 }
