--- a/src/main/resources/assets/bedrock-weapons/lang/en_us.json
+++ b/src/main/resources/assets/bedrock-weapons/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.bedrock-weapons.bedrocksword": "Bedrock Sword",
   "item.bedrock-weapons.bedrockaxe": "Bedrock Axe",
+  "item.bedrock-weapons.bedrockspear": "Bedrock Spear",
   "item.bedrock-weapons.bedrockgoldenapple": "Bedrock Apple"
 }
